--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -9,6 +9,12 @@
     background-repeat: no-repeat;
     font-family: sans-serif;
 }
+@media screen and (max-width= 1010px){
+    .sidebar{
+        display: flex;
+        flex-direction: row;
+    }
+}
 
 /* .sidebar .active-link {
     background-color: hsl(228, 100%, 84%);
