--- a/src/styles/thanks.css
+++ b/src/styles/thanks.css
@@ -1,7 +1,20 @@
 .thanks-container {
-    margin: 5rem;
+    display: flex;
+    align-content: center;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    padding-top: 30%;
+    text-align: center;
+    letter-spacing: 1.3px;
+    line-height: 1.5;
+   
+    /* margin: 5rem;
     padding-top: 10px;
     padding-right: 10px;
     text-align: center;
-    height: 60vh;
+    height: 60vh; */
+}
+.thanks-container p{
+    color:  hsl(231, 11%, 63%);
 }
